[gd_scene load_steps=10 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Главное меню.png" type="Texture" id=2]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Вернуться нажата.png" type="Texture" id=3]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Настройки.png" type="Texture" id=4]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Главное меню нажата.png" type="Texture" id=5]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Сохранить игру нажата.png" type="Texture" id=6]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Вернуться.png" type="Texture" id=7]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Настройки нажата.png" type="Texture" id=8]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Сохранить игру.png" type="Texture" id=9]

[node name="PauseSreen" type="CanvasLayer"]

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.01012, 1.01292 )
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Вернуться" type="TextureButton" parent="Pause"]
margin_left = 105.0
margin_top = 36.0
margin_right = 229.0
margin_bottom = 59.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Сохранить игру" type="TextureButton" parent="Pause"]
margin_left = 105.0
margin_top = 63.0
margin_right = 229.0
margin_bottom = 86.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )

[node name="Настройки" type="TextureButton" parent="Pause"]
margin_left = 105.0
margin_top = 90.0
margin_right = 229.0
margin_bottom = 113.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Главное меню" type="TextureButton" parent="Pause"]
margin_left = 103.0
margin_top = 124.0
margin_right = 227.0
margin_bottom = 147.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Главное меню2" type="TextureButton" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 154.0
margin_right = -56.0
margin_bottom = -23.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pause/Вернуться" to="Pause" method="_on_Back_pressed"]
[connection signal="pressed" from="Pause/Сохранить игру" to="Pause" method="_on__SaveGame_pressed"]
[connection signal="pressed" from="Pause/Главное меню" to="Pause" method="_on_RerurnInMainMenu_pressed"]
[connection signal="pressed" from="Pause/Главное меню2" to="Pause" method="_on__2_pressed"]
